--- a/index.html
+++ b/index.html
@@ -3,7 +3,14 @@
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1></h1>
+         <h1 id="first-line">Generate a </h1>
+         <h1 >random password</h1>
+         <h2>never use an insecure password again</h2>
+        <button id="generate-btn" onclick="generatePassword()">Generate password</button>
+        <div id="password-btn">
+                <button id="password1-el"></button>
+                <button id="password2-el"></button>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
